--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" type="image/jpg" href="">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="manifest" href="./manifest.json">
   <link rel="stylesheet" href="./assets/dist/tailwind.css">
@@ -19,16 +19,16 @@
   <div class="flex flex-col items-center justify-center bg-background text-body w-full">
     
     <header class="h-16">
-      <nav class="flex flex-row items-center justify-between w-80 px-2 pt-6 pb-3">
-        <button title="Open menu" aria-label="Open menu">
+      <nav class="flex flex-row items-center justify-between w-80 px-0 pt-6 pb-3">
+        <button title="Open menu" aria-label="Open menu" class="text-2xl outline-none">
           <i class="bi bi-list"></i>
         </button>
-        <h1 class="text-title text-xl">Furore</h1>
+        <h1 class="font-garamond text-title text-2xl">Furore</h1>
         <div class="flex gap-4">
-          <button title="Search products" aria-label="Search products">
+          <button title="Search products" aria-label="Search products" class="text-2xl outline-none">
             <i class="bi bi-search"></i>
           </button>
-          <button title="Your bag" aria-label="Your bag">
+          <button title="Your bag" aria-label="Your bag" class="text-2xl outline-none">
             <i class="bi bi-bag"></i>
           </button>
         </div>
@@ -36,11 +36,16 @@
     </header>
     
     <main>
-      <section class="bg-hero-mobile bg-cover bg-no-repeat h-[calc(100vh-64px)] w-screen flex flex-col items-center justify-end">
-        <div class="pb-10">
-          <button title="Discover more" aria-label="Discover more" class="bg-gray-400/40 backdrop-blur-sm px-8 py-2 rounded-full text-title uppercase text-2xl">
+      <section class="bg-hero-mobile-1 bg-cover bg-no-repeat h-[calc(100vh-64px)] w-screen flex flex-col items-center justify-end shadow-inner">
+        <div class="pb-12">
+          <button title="Discover more" aria-label="Discover more" class="bg-background/40 backdrop-blur-sm px-8 py-2 rounded-full text-title font-light uppercase text-2xl outline-none">
             Discover more
           </button>
+          <div class="flex flex-row justify-center gap-2 mt-3">
+            <button title="Model wearing Furore jacket" aria-label="Model wearing Furore jacket" class="bg-background/40 p-1 m-2 rounded-full outline-none"></button>
+            <button title="Model wearing Furore jacket" aria-label="Model wearing Furore jacket" class="bg-background/40 p-1 m-2 rounded-full outline-none"></button>
+            <button title="Model wearing Furore jacket" aria-label="Model wearing Furore jacket" class="bg-background/40 p-1 m-2 rounded-full outline-none"></button>
+          </div>
         </div>
       </section>
     </main>
