--- a/src/index.html
+++ b/src/index.html
@@ -36,15 +36,15 @@
     </header>
     
     <main>
-      <section id="heroSection" class="bg-hero-mobile-1 bg-cover bg-no-repeat h-[calc(100vh-64px)] w-screen flex flex-col items-center justify-end shadow-inner">
+      <section id="heroSection" class="bg-hero-mobile-1 bg-cover bg-center bg-no-repeat h-[calc(100vh-64px)] w-screen flex flex-col items-center justify-end">
         <div class="pb-12">
           <button title="Discover more" aria-label="Discover more" class="bg-background/40 backdrop-blur-sm px-8 py-2 rounded-full text-title font-light uppercase text-2xl outline-none">
             Discover more
           </button>
           <div id="heroButtons" class="flex flex-row justify-center gap-2 mt-3">
-            <button title="Model wearing Furore jacket" aria-label="Model wearing Furore jacket" class="bg-background/40 p-1 m-2 rounded-full outline-none"></button>
-            <button title="Model wearing Furore jacket" aria-label="Model wearing Furore jacket" class="bg-background/40 p-1 m-2 rounded-full outline-none"></button>
-            <button title="Model wearing Furore jacket" aria-label="Model wearing Furore jacket" class="bg-background/40 p-1 m-2 rounded-full outline-none"></button>
+            <button title="Model wearing Furore jacket" aria-label="Model wearing Furore jacket" class="bg-background p-1 m-2 rounded-full outline-none shadow-md shadow-black"></button>
+            <button title="Model wearing white coat" aria-label="Model wearing white coat" class="bg-background/40 p-1 m-2 rounded-full outline-none shadow-md shadow-black"></button>
+            <button title="Model wearing yellow t-shirt" aria-label="Model wearing yellow t-shirt" class="bg-background/40 p-1 m-2 rounded-full outline-none shadow-md shadow-black"></button>
           </div>
         </div>
       </section>
