feat: adiciona transição na seção do hero

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     </header>
     
     <main>
-      <section id="heroSection" class="bg-hero-mobile-1 bg-cover bg-center bg-no-repeat h-[calc(100vh-64px)] w-screen flex flex-col items-center justify-end">
+      <section id="heroSection" class="bg-hero-mobile-1 bg-cover bg-center bg-no-repeat h-[calc(100vh-64px)] transition-all duration-500 ease-in-out w-screen flex flex-col items-center justify-end">
         <div class="pb-12">
           <button title="Discover more" aria-label="Discover more" class="bg-background/40 backdrop-blur-sm px-8 py-2 rounded-full text-title font-light uppercase text-2xl outline-none">
             Discover more
@@ -52,6 +52,6 @@
     
   </div>
   
-  <script src="./assets/js/main.js"></script>
+  <script type="module" src="./assets/js/main.js"></script>
 </body>
 </html>
