feat: adiciona seção de nova temporada

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       </nav>
     </header>
     
-    <main>
+    <main class="flex flex-col">
       <section id="heroSection" class="bg-hero-mobile-1 bg-cover bg-center bg-no-repeat h-[calc(100vh-64px)] transition-all duration-500 ease-in-out w-screen flex flex-col items-center justify-end">
         <div class="pb-12">
           <button title="Discover more" aria-label="Discover more" class="bg-background/40 backdrop-blur-sm px-8 py-2 rounded-full text-title font-light uppercase text-2xl outline-none">
@@ -46,6 +46,17 @@
             <button title="Model wearing white coat" aria-label="Model wearing white coat" class="bg-background/40 p-1 m-2 rounded-full outline-none shadow-md shadow-black"></button>
             <button title="Model wearing yellow t-shirt" aria-label="Model wearing yellow t-shirt" class="bg-background/40 p-1 m-2 rounded-full outline-none shadow-md shadow-black"></button>
           </div>
+        </div>
+      </section>
+      
+      <section class="w-screen flex flex-col">
+        <div class="h-24 w-full flex flex-col items-center justify-center gap-2">
+          <h2 class="text-2xl">New Season</h2>
+          <ul class="flex gap-4">
+            <li><button class="uppercase">Men</button></li>
+            <li><button class="uppercase">Women</button></li>
+            <li><button class="uppercase">Accessories</button></li>
+          </ul>
         </div>
       </section>
     </main>
